# hexlet-django-blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml
hexlet_django_blog/: my_classes.py  settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/templates/: about.html  base.html  comment.html  index.html
hexlet_django_blog/templates/article/: article.html  create.html  index.html
